[package]
name = "mines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# log = "0.4.21"
rand = "0.8.5"
smallvec = "1.11.1"

[dev-dependencies]
criterion = "*"

[features]
default = ["guess"]
guess = []

[[bench]]
name = "bench_shuffle"
harness = false
